// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateI18nPagesTitles (formatted) > should match snapshot 1`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const EMPTY_FAKE_PAGES_TITLES = {} as const;
type EmptyString = '';
export default EMPTY_FAKE_PAGES_TITLES;
"
`;

exports[`generateI18nPagesTitles (formatted) > should match snapshot 2`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_PAGES_TITLES_FAKE_METADATAS_A = {
  "fake-category-one": _,
  "fake-subcategory-one": _,
  "fake-subcategory-three": _,
  "fake-subcategory-two": _,
  "fake-category-three": _,
  "fake-subcategory-five": _,
  "fake-subcategory-four": _,
  "fake-category-two": _,
  "fake-subcategory-six": _
} as const;
type EmptyString = '';
export default FAKE_PAGES_TITLES_FAKE_METADATAS_A;
"
`;

exports[`generateI18nPagesTitles (formatted) > should match snapshot 3`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_PAGES_TITLES_FAKE_METADATAS_B = {
  "fake-category-one": _,
  "fake-subcategory-one": _,
  "fake-subcategory-three": _,
  "fake-subcategory-two": _,
  "fake-category-three": _,
  "fake-subcategory-five": _,
  "fake-subcategory-four": _,
  "fake-empty-subcategories-nested-in-category": _,
  "fake-subcategory-seven": _,
  "fake-empty-subcategory": _,
  "fake-category-two": _,
  "fake-subcategory-six": _,
  "fake-empty-category": _
} as const;
type EmptyString = '';
export default FAKE_PAGES_TITLES_FAKE_METADATAS_B;
"
`;

exports[`generateI18nPagesTitles (ugly) > should match snapshot 1`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const EMPTY_FAKE_PAGES_TITLES = {} as const;
type EmptyString = '';
export default EMPTY_FAKE_PAGES_TITLES;"
`;

exports[`generateI18nPagesTitles (ugly) > should match snapshot 2`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_PAGES_TITLES_FAKE_METADATAS_A = {"fake-category-one":_,"fake-subcategory-one":_,"fake-subcategory-three":_,"fake-subcategory-two":_,"fake-category-three":_,"fake-subcategory-five":_,"fake-subcategory-four":_,"fake-category-two":_,"fake-subcategory-six":_} as const;
type EmptyString = '';
export default FAKE_PAGES_TITLES_FAKE_METADATAS_A;"
`;

exports[`generateI18nPagesTitles (ugly) > should match snapshot 3`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_PAGES_TITLES_FAKE_METADATAS_B = {"fake-category-one":_,"fake-subcategory-one":_,"fake-subcategory-three":_,"fake-subcategory-two":_,"fake-category-three":_,"fake-subcategory-five":_,"fake-subcategory-four":_,"fake-empty-subcategories-nested-in-category":_,"fake-subcategory-seven":_,"fake-empty-subcategory":_,"fake-category-two":_,"fake-subcategory-six":_,"fake-empty-category":_} as const;
type EmptyString = '';
export default FAKE_PAGES_TITLES_FAKE_METADATAS_B;"
`;
